--- a/kafka/kafka/values.yaml
+++ b/kafka/kafka/values.yaml
@@ -1021,7 +1021,13 @@ broker:
   ##     cpu: 3
   ##     memory: 1024Mi
   ##
-  resources: {}
+  resources:
+    requests:
+      cpu: 10
+      memory: 16Gi
+    limits:
+      cpu: 10
+      memory: 16Gi
   ## Kafka pods' Security Context
   ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-pod
   ## @param broker.podSecurityContext.enabled Enable security context for the pods
