--- a/kafka/config/pv.yaml
+++ b/kafka/config/pv.yaml
@@ -12,6 +12,7 @@ spec:
     - ReadWriteOnce
   local:
     path: /home/ubuntu/volume/tm-gla/kafka/kafka-zk-0
+  #TODO
   nodeAffinity:
     required:
       nodeSelectorTerms:
@@ -34,6 +35,7 @@ spec:
     - ReadWriteOnce
   local:
     path: /home/ubuntu/volume/tm-gla/kafka/kafka-broker-0
+  #TODO
   nodeAffinity:
     required:
       nodeSelectorTerms:
@@ -56,6 +58,7 @@ spec:
     - ReadWriteOnce
   local:
     path: /home/ubuntu/volume/tm-gla/kafka/kafka-zk-1
+  #TODO: 
   nodeAffinity:
     required:
       nodeSelectorTerms:
@@ -78,6 +81,7 @@ spec:
     - ReadWriteOnce
   local:
     path: /home/ubuntu/volume/tm-gla/kafka/kafka-broker-1
+  #TODO
   nodeAffinity:
     required:
       nodeSelectorTerms:
@@ -100,6 +104,7 @@ spec:
     - ReadWriteOnce
   local:
     path: /home/ubuntu/volume/tm-gla/kafka/kafka-zk-2
+  #TODO
   nodeAffinity:
     required:
       nodeSelectorTerms:
@@ -122,6 +127,7 @@ spec:
     - ReadWriteOnce
   local:
     path: /home/ubuntu/volume/tm-gla/kafka/kafka-broker-2
+  #TODO
   nodeAffinity:
     required:
       nodeSelectorTerms:
