dynamised the xVomulex

--- a/kafka/config/pv.yaml
+++ b/kafka/config/pv.yaml
@@ -7,20 +7,9 @@ spec:
   capacity:
     storage: 10Gi
   volumeMode: Filesystem
-  storageClassName: local-path
+  storageClassName: standard
   accessModes:
     - ReadWriteOnce
-  local:
-    path: /home/ubuntu/volume/tm-gla/kafka/kafka-zk-0
-  #TODO
-  nodeAffinity:
-    required:
-      nodeSelectorTerms:
-        - matchExpressions:
-            - key: kubernetes.io/hostname
-              operator: In
-              values:
-                - fun-krill
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -30,20 +19,9 @@ spec:
   capacity:
     storage: 8Gi
   volumeMode: Filesystem
-  storageClassName: local-path
+  storageClassName: standard
   accessModes:
     - ReadWriteOnce
-  local:
-    path: /home/ubuntu/volume/tm-gla/kafka/kafka-broker-0
-  #TODO
-  nodeAffinity:
-    required:
-      nodeSelectorTerms:
-        - matchExpressions:
-            - key: kubernetes.io/hostname
-              operator: In
-              values:
-                - exotic-weevil
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -53,20 +31,9 @@ spec:
   capacity:
     storage: 10Gi
   volumeMode: Filesystem
-  storageClassName: local-path
+  storageClassName: standard
   accessModes:
     - ReadWriteOnce
-  local:
-    path: /home/ubuntu/volume/tm-gla/kafka/kafka-zk-1
-  #TODO: 
-  nodeAffinity:
-    required:
-      nodeSelectorTerms:
-        - matchExpressions:
-            - key: kubernetes.io/hostname
-              operator: In
-              values:
-                - crisp-leech
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -76,20 +43,9 @@ spec:
   capacity:
     storage: 8Gi
   volumeMode: Filesystem
-  storageClassName: local-path
+  storageClassName: standard
   accessModes:
     - ReadWriteOnce
-  local:
-    path: /home/ubuntu/volume/tm-gla/kafka/kafka-broker-1
-  #TODO
-  nodeAffinity:
-    required:
-      nodeSelectorTerms:
-        - matchExpressions:
-            - key: kubernetes.io/hostname
-              operator: In
-              values:
-                - cosmic-bull
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -99,20 +55,9 @@ spec:
   capacity:
     storage: 10Gi
   volumeMode: Filesystem
-  storageClassName: local-path
+  storageClassName: standard
   accessModes:
     - ReadWriteOnce
-  local:
-    path: /home/ubuntu/volume/tm-gla/kafka/kafka-zk-2
-  #TODO
-  nodeAffinity:
-    required:
-      nodeSelectorTerms:
-        - matchExpressions:
-            - key: kubernetes.io/hostname
-              operator: In
-              values:
-                - braine-head-node
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -122,20 +67,9 @@ spec:
   capacity:
     storage: 8Gi
   volumeMode: Filesystem
-  storageClassName: local-path
+  storageClassName: standard
   accessModes:
     - ReadWriteOnce
-  local:
-    path: /home/ubuntu/volume/tm-gla/kafka/kafka-broker-2
-  #TODO
-  nodeAffinity:
-    required:
-      nodeSelectorTerms:
-        - matchExpressions:
-            - key: kubernetes.io/hostname
-              operator: In
-              values:
-                - alert-boxer
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -148,7 +82,7 @@ spec:
   resources:
     requests:
       storage: 8Gi
-  storageClassName: local-path
+  storageClassName: standard
   volumeName: data-kafka-broker-0
 ---
 apiVersion: v1
@@ -162,7 +96,7 @@ spec:
   resources:
     requests:
       storage: 8Gi
-  storageClassName: local-path
+  storageClassName: standard
   volumeName: data-kafka-broker-1
 ---
 apiVersion: v1
@@ -176,7 +110,7 @@ spec:
   resources:
     requests:
       storage: 8Gi
-  storageClassName: local-path
+  storageClassName: standard
   volumeName: data-kafka-broker-2
 ---
 apiVersion: v1
@@ -190,7 +124,7 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  storageClassName: local-path
+  storageClassName: standard
   volumeName: data-kafka-zookeeper-0
 ---
 apiVersion: v1
@@ -204,7 +138,7 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  storageClassName: local-path
+  storageClassName: standard
   volumeName: data-kafka-zookeeper-1
 ---
 apiVersion: v1
@@ -218,5 +152,5 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  storageClassName: local-path
+  storageClassName: standard
   volumeName: data-kafka-zookeeper-2
