--- a/kafka/config/pv.yaml
+++ b/kafka/config/pv.yaml
@@ -1,75 +1,75 @@
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: data-kafka-zookeeper-0
-spec:
-  capacity:
-    storage: 10Gi
-  volumeMode: Filesystem
-  storageClassName: standard
-  accessModes:
-    - ReadWriteOnce
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: data-kafka-broker-0
-spec:
-  capacity:
-    storage: 8Gi
-  volumeMode: Filesystem
-  storageClassName: standard
-  accessModes:
-    - ReadWriteOnce
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: data-kafka-zookeeper-1
-spec:
-  capacity:
-    storage: 10Gi
-  volumeMode: Filesystem
-  storageClassName: standard
-  accessModes:
-    - ReadWriteOnce
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: data-kafka-broker-1
-spec:
-  capacity:
-    storage: 8Gi
-  volumeMode: Filesystem
-  storageClassName: standard
-  accessModes:
-    - ReadWriteOnce
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: data-kafka-zookeeper-2
-spec:
-  capacity:
-    storage: 10Gi
-  volumeMode: Filesystem
-  storageClassName: standard
-  accessModes:
-    - ReadWriteOnce
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: data-kafka-broker-2
-spec:
-  capacity:
-    storage: 8Gi
-  volumeMode: Filesystem
-  storageClassName: standard
-  accessModes:
-    - ReadWriteOnce
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: data-kafka-zookeeper-0
+# spec:
+#   capacity:
+#     storage: 10Gi
+#   volumeMode: Filesystem
+#   storageClassName: standard
+#   accessModes:
+#     - ReadWriteOnce
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: data-kafka-broker-0
+# spec:
+#   capacity:
+#     storage: 8Gi
+#   volumeMode: Filesystem
+#   storageClassName: standard
+#   accessModes:
+#     - ReadWriteOnce
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: data-kafka-zookeeper-1
+# spec:
+#   capacity:
+#     storage: 10Gi
+#   volumeMode: Filesystem
+#   storageClassName: standard
+#   accessModes:
+#     - ReadWriteOnce
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: data-kafka-broker-1
+# spec:
+#   capacity:
+#     storage: 8Gi
+#   volumeMode: Filesystem
+#   storageClassName: standard
+#   accessModes:
+#     - ReadWriteOnce
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: data-kafka-zookeeper-2
+# spec:
+#   capacity:
+#     storage: 10Gi
+#   volumeMode: Filesystem
+#   storageClassName: standard
+#   accessModes:
+#     - ReadWriteOnce
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: data-kafka-broker-2
+# spec:
+#   capacity:
+#     storage: 8Gi
+#   volumeMode: Filesystem
+#   storageClassName: standard
+#   accessModes:
+#     - ReadWriteOnce
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
