--- a/kafka/values-prod.yaml
+++ b/kafka/values-prod.yaml
@@ -12,7 +12,7 @@ auth:
 
 broker:
   replicaCount: 3
-  podAntiAffinityPreset: soft
+  podAntiAffinityPreset: hard
 #  customConfig:
 #    offsetsTopicReplicationFactor: 1
 #    transactionStateLogReplicationFactor: 1
@@ -24,7 +24,7 @@ controller:
 zookeeper:
   enabled: true
   replicaCount: 3
-  podAntiAffinityPreset: soft
+  podAntiAffinityPreset: hard
 
 listeners:
   client:
