--- a/kafka/config/pv.yaml
+++ b/kafka/config/pv.yaml
@@ -1,80 +1,80 @@
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: data-kafka-zookeeper-0
+# spec:
+#   capacity:
+#     storage: 10Gi
+#   volumeMode: Filesystem
+#   storageClassName: standard
+#   accessModes:
+#     - ReadWriteOnce
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: data-kafka-broker-0
+# spec:
+#   capacity:
+#     storage: 8Gi
+#   volumeMode: Filesystem
+#   storageClassName: standard
+#   accessModes:
+#     - ReadWriteOnce
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: data-kafka-zookeeper-1
+# spec:
+#   capacity:
+#     storage: 10Gi
+#   volumeMode: Filesystem
+#   storageClassName: standard
+#   accessModes:
+#     - ReadWriteOnce
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: data-kafka-broker-1
+# spec:
+#   capacity:
+#     storage: 8Gi
+#   volumeMode: Filesystem
+#   storageClassName: standard
+#   accessModes:
+#     - ReadWriteOnce
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: data-kafka-zookeeper-2
+# spec:
+#   capacity:
+#     storage: 10Gi
+#   volumeMode: Filesystem
+#   storageClassName: standard
+#   accessModes:
+#     - ReadWriteOnce
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: data-kafka-broker-2
+# spec:
+#   capacity:
+#     storage: 8Gi
+#   volumeMode: Filesystem
+#   storageClassName: standard
+#   accessModes:
+#     - ReadWriteOnce
 ---
 apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: data-kafka-zookeeper-0
-spec:
-  capacity:
-    storage: 10Gi
-  volumeMode: Filesystem
-  storageClassName: standard
-  accessModes:
-    - ReadWriteOnce
----
-apiVersion: v1
-kind: PersistentVolume
+kind: PersistentVolumeClaim
 metadata:
   name: data-kafka-broker-0
-spec:
-  capacity:
-    storage: 8Gi
-  volumeMode: Filesystem
-  storageClassName: standard
-  accessModes:
-    - ReadWriteOnce
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: data-kafka-zookeeper-1
-spec:
-  capacity:
-    storage: 10Gi
-  volumeMode: Filesystem
-  storageClassName: standard
-  accessModes:
-    - ReadWriteOnce
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: data-kafka-broker-1
-spec:
-  capacity:
-    storage: 8Gi
-  volumeMode: Filesystem
-  storageClassName: standard
-  accessModes:
-    - ReadWriteOnce
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: data-kafka-zookeeper-2
-spec:
-  capacity:
-    storage: 10Gi
-  volumeMode: Filesystem
-  storageClassName: standard
-  accessModes:
-    - ReadWriteOnce
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: data-kafka-broker-2
-spec:
-  capacity:
-    storage: 8Gi
-  volumeMode: Filesystem
-  storageClassName: standard
-  accessModes:
-    - ReadWriteOnce
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: data-kafka-broker-0
   namespace: kafka
 spec:
   accessModes:
@@ -82,8 +82,8 @@ spec:
   resources:
     requests:
       storage: 8Gi
-  storageClassName: standard
-  volumeName: data-kafka-broker-0
+  storageClassName: fast
+  # volumeName: data-kafka-broker-0
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -96,8 +96,7 @@ spec:
   resources:
     requests:
       storage: 8Gi
-  storageClassName: standard
-  volumeName: data-kafka-broker-1
+  storageClassName: fast
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -110,8 +109,7 @@ spec:
   resources:
     requests:
       storage: 8Gi
-  storageClassName: standard
-  volumeName: data-kafka-broker-2
+  storageClassName: fast
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -124,8 +122,7 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  storageClassName: standard
-  volumeName: data-kafka-zookeeper-0
+  storageClassName: fast
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -138,8 +135,7 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  storageClassName: standard
-  volumeName: data-kafka-zookeeper-1
+  storageClassName: fast
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -152,5 +148,4 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  storageClassName: standard
-  volumeName: data-kafka-zookeeper-2
+  storageClassName: fast
