--- a/kafka/config/pv.yaml
+++ b/kafka/config/pv.yaml
@@ -82,8 +82,7 @@ spec:
   resources:
     requests:
       storage: 8Gi
-  storageClassName: standard-rwo
-  # volumeName: data-kafka-broker-0
+  storageClassName: gp2
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -96,7 +95,7 @@ spec:
   resources:
     requests:
       storage: 8Gi
-  storageClassName: standard-rwo
+  storageClassName: gp2
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -109,7 +108,7 @@ spec:
   resources:
     requests:
       storage: 8Gi
-  storageClassName: standard-rwo
+  storageClassName: gp2
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -122,7 +121,7 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  storageClassName: standard-rwo
+  storageClassName: gp2
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -135,7 +134,7 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  storageClassName: standard-rwo
+  storageClassName: gp2
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -148,4 +147,4 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  storageClassName: standard-rwo
+  storageClassName: gp2
