changing the sc to our cluster's

--- a/kafka/config/pv.yaml
+++ b/kafka/config/pv.yaml
@@ -82,7 +82,7 @@ spec:
   resources:
     requests:
       storage: 8Gi
-  storageClassName: gp2
+  storageClassName: longhorn
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -95,7 +95,7 @@ spec:
   resources:
     requests:
       storage: 8Gi
-  storageClassName: gp2
+  storageClassName: longhorn
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -108,7 +108,7 @@ spec:
   resources:
     requests:
       storage: 8Gi
-  storageClassName: gp2
+  storageClassName: longhorn
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -121,7 +121,7 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  storageClassName: gp2
+  storageClassName: longhorn
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -134,7 +134,7 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  storageClassName: gp2
+  storageClassName: longhorn
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -147,4 +147,4 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  storageClassName: gp2
+  storageClassName: longhorn
