--- a/scheduled-client/deployment.yaml
+++ b/scheduled-client/deployment.yaml
@@ -1,15 +1,15 @@
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: data-mef-pv
-spec:
-  capacity:
-    storage: 10Gi
-  volumeMode: Filesystem
-  storageClassName: longhorn
-  accessModes:
-    - ReadWriteOnce
----
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: data-mef-pv
+# spec:
+#   capacity:
+#     storage: 10Gi
+#   volumeMode: Filesystem
+#   storageClassName: longhorn
+#   accessModes:
+#     - ReadWriteOnce
+# ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
