--- a/scheduled-client/deployment.yaml
+++ b/scheduled-client/deployment.yaml
@@ -47,7 +47,7 @@ spec:
             limits:
               memory: "2Gi"
               cpu: 1
-          imagePullPolicy: Never
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
           env:
