--- a/workload-core/scheduled-client/src/main/resources/application.yaml
+++ b/workload-core/scheduled-client/src/main/resources/application.yaml
@@ -2,9 +2,8 @@ spring:
     application:
         name: scheduled-client
     kafka:
-        enabled: ${SPRING_KAFKA_ENABLED:true}
         producer:
-            bootstrap-servers: ${SPRING_KAFKA_PRODUCER_BOOTSTRAP-SERVERS:vmmeftmsrv.inmatica.com:9092}
+            bootstrap-servers: ${SPRING_KAFKA_PRODUCER_BOOTSTRAP-SERVERS}
             topic: ${SPRING_KAFKA_PRODUCER_TOPIC:timbrature}
     servlet:
         multipart:
