--- a/workload-core/elaboration-timb-ms/src/main/resources/application.yaml
+++ b/workload-core/elaboration-timb-ms/src/main/resources/application.yaml
@@ -21,11 +21,12 @@ spring:
         consumer:
             bootstrap-servers: ${SPRING_KAFKA_CONSUMER_BOOTSTRAP-SERVERS:${spring.embedded.kafka.brokers}}
             group-id: ${SPRING_KAFKA_CONSUMER_GROUP-ID:tm-gla}
-            max-poll-records: ${SPRING_KAFKA_CONSUMER_MAX-POLL-RECORDS:1}
+            max-poll-records: ${SPRING_KAFKA_CONSUMER_MAX-POLL-RECORDS:500}
             properties:
-                max-poll-interval-ms: ${SPRING_KAFKA_CONSUMER_MAX-POLL-INTERVAL-MS:60000}
+                max-poll-interval-ms: ${SPRING_KAFKA_CONSUMER_MAX-POLL-INTERVAL-MS:300000}
         listener:
             topic: ${SPRING_KAFKA_LISTENER_TOPIC:timbrature}
+            concurrency: ${SPRING_KAFKA_LISTENER_CONCURRENCY:1}
 server:
     port: 8081
     servlet:
