--- a/workload-core/deployment.yaml
+++ b/workload-core/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: data-mef-pvc
+  namespace: tm-gla
 spec:
   accessModes:
     - ReadWriteMany
@@ -83,7 +84,7 @@ metadata:
   name: elaboration-timb-ms-deployment
   namespace: tm-gla
 spec:
-  replicas: 1
+  replicas: 4
   selector:
     matchLabels:
       app: elaboration-timb-ms
@@ -94,7 +95,7 @@ spec:
     spec:
       containers:
         - name: elaboration-timb-ms
-          image: elaboration-timb-ms:1.0.0
+          image: elaboration-timb-ms:1.0.5
           resources:
             requests:
               memory: "2Gi"
@@ -122,10 +123,14 @@ spec:
               value: "/MEF/file/discarded"
             - name: PATH_METRICS
               value: "/MEF/metrics"
+            - name: SPRING_KAFKA_LISTENER_PARTITIONS
+              value: "12"
+            - name: SPRING_KAFKA_LISTENER_CONCURRENCY
+              value: "12"
             - name: SPRING_KAFKA_CONSUMER_MAX-POLL-RECORDS
               value: "1"
-            - name: SPRING_KAFKA_CONSUMER_MAX-POLL-INTERVAL-MS
-              value: "60000"
+#            - name: SPRING_KAFKA_CONSUMER_MAX-POLL-INTERVAL-MS
+#              value: "30000"
           volumeMounts:
             - name: data-mef
               mountPath: /MEF/
@@ -135,42 +140,70 @@ spec:
             claimName: data-mef-pvc
       restartPolicy: Always
 ---
-apiVersion: autoscaling/v2
-kind: HorizontalPodAutoscaler
-metadata:
-  name: elaboration-timb-ms-autoscaling
-  namespace: tm-gla
-spec:
-  scaleTargetRef:
-    apiVersion: apps/v1
-    kind: Deployment
-    name: elaboration-timb-ms-deployment
-  minReplicas: 1
-  maxReplicas: 4
-  metrics:
-    - type: Resource
-      resource:
-        name: cpu
-        target:
-          type: Utilization
-          averageUtilization: 60
-  behavior:
-    scaleDown:
-      stabilizationWindowSeconds: 60
-      policies:
-        - type: Pods
-          value: 4
-          periodSeconds: 60
-        - type: Percent
-          value: 10
-          periodSeconds: 60
-    scaleUp:
-      stabilizationWindowSeconds: 5
-      policies:
-        - type: Percent
-          value: 100
-          periodSeconds: 15
-        - type: Pods
-          value: 4
-          periodSeconds: 15
-      selectPolicy: Max
+#apiVersion: autoscaling/v2
+#kind: HorizontalPodAutoscaler
+#metadata:
+#  name: elaboration-timb-ms-autoscaling
+#  namespace: tm-gla
+#spec:
+#  scaleTargetRef:
+#    apiVersion: apps/v1
+#    kind: Deployment
+#    name: elaboration-timb-ms-deployment
+#  minReplicas: 1
+#  maxReplicas: 4
+#  metrics:
+#    - type: Resource
+#      resource:
+#        name: cpu
+#        target:
+#          type: Utilization
+#          averageUtilization: 60
+#  behavior:
+#    scaleDown:
+#      stabilizationWindowSeconds: 120
+#      policies:
+#        - type: Pods
+#          value: 4
+#          periodSeconds: 60
+#        - type: Percent
+#          value: 10
+#          periodSeconds: 60
+#    scaleUp:
+#      stabilizationWindowSeconds: 0
+#      policies:
+#        - type: Percent
+#          value: 100
+#          periodSeconds: 15
+#        - type: Pods
+#          value: 4
+#          periodSeconds: 15
+#      selectPolicy: Max
+---
+#apiVersion: keda.sh/v1alpha1
+#kind: ScaledObject
+#metadata:
+#  name: elaboration-timb-ms-scaled
+#  namespace: tm-gla
+#spec:
+#  scaleTargetRef:
+#    name: elaboration-timb-ms-deployment
+#  cooldownPeriod: 30
+#  maxReplicaCount:  4
+#  advanced:
+#    horizontalPodAutoscalerConfig:
+#      behavior:
+#        scaleDown:
+#          stabilizationWindowSeconds: 300
+#          policies:
+#            - type: Percent
+#              value: 50
+#              periodSeconds: 30
+#  triggers: # (5)
+#    - type: kafka
+#      metadata:
+#        bootstrapServers: kafka.kafka.svc.cluster.local:9092
+#        consumerGroup: tm-gla
+#        topic: test
+#        lagThreshold: '6'
+#        offsetResetPolicy: earliest
