--- a/kafdrop/kafdrop.yaml
+++ b/kafdrop/kafdrop.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: kafdrop-deployment
-  namespace: kafka
+  namespace: kafdrop
   labels:
     app: kafdrop
 spec:
@@ -31,7 +31,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kafdrop-entrypoint
-  namespace: kafka
+  namespace: kafdrop
 spec:
   selector:
     app: kafdrop
