--- a/kafka/values-prod.yaml
+++ b/kafka/values-prod.yaml
@@ -13,6 +13,12 @@ auth:
 broker:
   replicaCount: 3
   podAntiAffinityPreset: hard
+  persistence:
+    enabled: true
+    storageClass: longhorn
+    accessModes:
+      - ReadWriteOnce
+    size: 2Gi
 #  customConfig:
 #    offsetsTopicReplicationFactor: 1
 #    transactionStateLogReplicationFactor: 1
@@ -25,6 +31,12 @@ zookeeper:
   enabled: true
   replicaCount: 3
   podAntiAffinityPreset: hard
+  persistence:
+    enabled: true
+    storageClass: longhorn
+    accessModes:
+      - ReadWriteOnce
+    size: 5Gi
 
 listeners:
   client:
