--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -6,16 +6,31 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: docker login
-      env:
-        DOCKER_USER: ${{ secrets.DOCKER_USER}}
-        DOCKER_PASS: ${{ secrets.DOCKER_PASS}}
-      run: |
-        docker login -u $DOCKER_USER -p $DOCKER_PASS
-    - name: docker build scheduled-client
-      run: |
-        docker build ./workload-core/scheduled-client -t mef-sog-uc1/scheduled-client:1.0.0
-    - name: docker build elaboration-timb-ms
-      run: |
-        docker build ./workload-core/elaboration-timb-ms -t mef-sog-uc1/elaboration-timb-ms:1.0.0
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
+    - name: Set up Docker Build
+      uses: docker/setup-buildx-action@v3
+
+    - name: Log into registry ${{ env.REGISTRY }}
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Extract Docker metadata
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        tags: ${{ env.DOCKER_TAGS }}
+
+#    - name: docker build scheduled-client
+#      run: |
+#        docker build ./workload-core/scheduled-client -t mef-sog-uc1/scheduled-client:1.0.0
+#    - name: docker build elaboration-timb-ms
+#      run: |
+#        docker build ./workload-core/elaboration-timb-ms -t mef-sog-uc1/elaboration-timb-ms:1.0.0
