--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Set up Docker Build
+    - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
     - name: Log into registry ${{ env.REGISTRY }}
@@ -36,7 +36,7 @@ jobs:
       with:
         push: true
 #        tags: ${{ env.DOCKER_IMAGES }}
-        tags: mef-sog-uc1/scheduled-client:1.0.0
+        tags: scheduled-client:1.0.0
         labels: ${{ steps.meta.outputs.labels }}
         context: "${{ github.workspace }}/workload-core/scheduled-client"
 
