--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,24 +24,21 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Extract Docker metadata
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-        tags: ${{ env.DOCKER_TAGS }}
+#    - name: Extract Docker metadata
+#      id: meta
+#      uses: docker/metadata-action@v5
+#      with:
+#        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+#        tags: ${{ env.DOCKER_TAGS }}
 
     - name: Build and push docker image scheduled-client
-      uses: docker/build-push-action@v5
+      uses: docker/build-push-action@v6
       with:
         push: true
 #        tags: ${{ env.DOCKER_IMAGES }}
         tags: scheduled-client:1.0.0
 #        labels: ${{ steps.meta.outputs.labels }}
         context: "${{ github.workspace }}/workload-core/scheduled-client"
-        registry: ${{ env.REGISTRY }}
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
 
 #    - name: docker build scheduled-client
 #      run: |
