--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -36,7 +36,7 @@ jobs:
       with:
         push: true
 #        tags: ${{ env.DOCKER_IMAGES }}
-        tags: scheduled-client:1.0.0
+        tags: ghcr.io/mef-sog-uc1/scheduled-client:1.0.0
 #        labels: ${{ steps.meta.outputs.labels }}
         context: "${{ github.workspace }}/workload-core/scheduled-client"
 
