--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: write
+      contents: read
       packages: write
     steps:
     - name: Checkout
@@ -39,7 +39,7 @@ jobs:
       with:
         push: true
 #        tags: ${{ env.DOCKER_IMAGES }}
-        tags: ghcr.io/ainnocenti2011/scheduled-client:1.0.0
+        tags: ghcr.io/scheduled-client:1.0.0
 #        labels: ${{ steps.meta.outputs.labels }}
         context: "${{ github.workspace }}/workload-core/scheduled-client"
 
