--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -39,7 +39,7 @@ jobs:
       with:
         push: true
 #        tags: ${{ env.DOCKER_IMAGES }}
-        tags: ghcr.io/glaciation-heu/scheduled-client:1.0.0
+        tags: "ghcr.io/glaciation-heu/mef-sog-uc1/scheduled-client:1.0.0"
 #        labels: ${{ steps.meta.outputs.labels }}
         context: "${{ github.workspace }}/workload-core/scheduled-client"
 
