--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,6 +1,12 @@
 name: Docker Series Builds
 
-on: [push]
+on: {}
+#  push:
+#    branches: [ "main" ]
+#    # Publish semver tags as releases.
+##    tags: [ 'v*.*.*' ]
+#  pull_request:
+#    branches: [ "main" ]
 
 env:
   REGISTRY: ghcr.io
