--- a/workload-core/deployment.yaml
+++ b/workload-core/deployment.yaml
@@ -36,7 +36,7 @@ spec:
             limits:
               memory: "2Gi"
               cpu: "1"
-          imagePullPolicy: Never
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
           env:
@@ -103,7 +103,7 @@ spec:
             limits:
               memory: "2Gi"
               cpu: "1"
-          imagePullPolicy: Never
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
           env:
