--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -38,12 +38,12 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-#    - name: Extract Docker metadata
-#      id: meta
-#      uses: docker/metadata-action@v5
-#      with:
-#        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-#        tags: ${{ env.DOCKER_TAGS }}
+    - name: Extract Docker metadata
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        tags: ${{ env.DOCKER_TAGS }}
 
     - name: Build and push docker image scheduled-client
       uses: docker/build-push-action@v6
