Push helm update mef-sog-uc1-wl

--- a/kafdrop/kafdrop.yaml
+++ b/kafdrop/kafdrop.yaml
@@ -36,8 +36,7 @@ spec:
   selector:
     app: kafdrop
   ports:
-    - port: 9000
-      targetPort: 9000
-      nodePort: 30010
+    - port: 80
+      targetPort: http
       protocol: TCP
-  type: NodePort
+  type: ClusterIP
