--- a/charts/uc1-workload/templates/service.yaml
+++ b/charts/uc1-workload/templates/service.yaml
@@ -10,5 +10,7 @@ spec:
   ports:
     - port: {{ .Values.scheduledClient.service.port }}
       targetPort: {{ .Values.scheduledClient.service.port }}
-      nodePort: {{ .Values.scheduledClient.service.nodePort }}
       protocol: TCP
+{{ if (and (eq .Values.scheduledClient.service.type "NodePort") (not (empty .Values.scheduledClient.service.nodePort))) }}
+      nodePort: {{.Values.scheduledClient.service.nodePort }}
+{{ end }}
