Push helm update mef-sog-uc1-wl

--- a/charts/uc1-workload/templates/deployment.yaml
+++ b/charts/uc1-workload/templates/deployment.yaml
@@ -25,7 +25,9 @@ spec:
               cpu: '1'
           imagePullPolicy: IfNotPresent
           ports:
-            - containerPort: {{ .Values.scheduledClient.service.port }}
+            - name: http
+              containerPort: {{ .Values.scheduledClient.service.port }}
+              protocol: TCP
           env:
             - name: SPRING_KAFKA_ENABLED
               value: 'true'
