--- a/charts/uc1-workload/templates/service.yaml
+++ b/charts/uc1-workload/templates/service.yaml
@@ -11,6 +11,7 @@ spec:
     - port: {{ .Values.scheduledClient.service.port }}
       targetPort: {{ .Values.scheduledClient.service.targetPort }}
       protocol: TCP
+      name: http
 {{ if (and (eq .Values.scheduledClient.service.type "NodePort") (not (empty .Values.scheduledClient.service.nodePort))) }}
       nodePort: {{.Values.scheduledClient.service.nodePort }}
 {{ end }}
