--- a/charts/uc1-workload/templates/deployment.yaml
+++ b/charts/uc1-workload/templates/deployment.yaml
@@ -26,7 +26,7 @@ spec:
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
-              containerPort: {{ .Values.scheduledClient.service.port }}
+              containerPort: 8080
               protocol: TCP
           env:
             - name: SPRING_KAFKA_ENABLED
