--- a/charts/uc1-workload/templates/deployment.yaml
+++ b/charts/uc1-workload/templates/deployment.yaml
@@ -18,11 +18,11 @@ spec:
           image: {{ .Values.scheduledClient.image }}
           resources:
             requests:
-              memory: '2Gi'
-              cpu: '1'
+              memory: '{{ .Values.scheduledClient.resources.requests.memory }}'
+              cpu: '{{ .Values.scheduledClient.resources.requests.cpu }}'
             limits:
-              memory: '2Gi'
-              cpu: '1'
+              memory: '{{ .Values.scheduledClient.resources.limits.memory }}'
+              cpu: '{{ .Values.scheduledClient.resources.limits.cpu }}'
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
@@ -30,24 +30,24 @@ spec:
               protocol: TCP
           env:
             - name: SPRING_KAFKA_ENABLED
-              value: 'true'
+              value: '{{ .Values.scheduledClient.kafkaEnabled }}'
             - name: SPRING_KAFKA_PRODUCER_BOOTSTRAP-SERVERS
               value: {{ .Values.kafka.bootstrapServers }}
             - name: SPRING_KAFKA_PRODUCER_TOPIC
               value: {{ .Values.kafka.topic }}
             - name: SPRING_SERVLET_MULTIPART_MAX-FILE-SIZE
-              value: '500MB'
+              value: '{{ .Values.scheduledClient.multipartMaxFileSize }}'
             - name: PATH_TIMESTAMPS
-              value: '/MEF/file/timbrature'
+              value: '{{ .Values.volume.path.timbrature }}'
             - name: PATH_TIMESTAMPS_TO-BE-ELABORATED
-              value: '/MEF/file/to-be-elaborated'
+              value: '{{ .Values.volume.path.toBeElaborated }}'
             - name: FIXEDRATE_WATCHING_FOLDER_SECONDS
-              value: '1'
+              value: '{{ .Values.scheduledClient.watchingFolderSeconds }}'
             - name: TZ
-              value: 'Europe/Rome'
+              value: '{{ .Values.timeZone }}'
           volumeMounts:
             - name: data-mef
-              mountPath: /MEF/
+              mountPath: '{{ .Values.volume.mountPath }}'
       volumes:
         - name: data-mef
           persistentVolumeClaim:
@@ -74,46 +74,46 @@ spec:
           image: {{ .Values.elaborationTimbMs.image }}
           resources:
             requests:
-              memory: '2Gi'
-              cpu: '1'
+              memory: '{{ .Values.elaborationTimbMs.resources.requests.memory }}'
+              cpu: '{{ .Values.elaborationTimbMs.resources.requests.cpu }}'
             limits:
-              memory: '2Gi'
-              cpu: '1'
+              memory: '{{ .Values.elaborationTimbMs.resources.limits.memory }}'
+              cpu: '{{ .Values.elaborationTimbMs.resources.limits.cpu }}'
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
           env:
             - name: H2_CONSOLE
-              value: 'false'
+              value: '{{ .Values.elaborationTimbMs.h2Console }}'
             - name: LOG_LEVEL_JPA
-              value: 'false'
+              value: '{{ .Values.elaborationTimbMs.logLevelJpa }}'
             - name: SPRING_KAFKA_CONSUMER_BOOTSTRAP-SERVERS
               value: {{ .Values.kafka.bootstrapServers }}
             - name: SPRING_KAFKA_LISTENER_TOPIC
               value: {{ .Values.kafka.topic }}
             - name: PATH_TIMESTAMPS_ELABORATED
-              value: '/MEF/file/elaborated'
+              value: '{{ .Values.volume.path.elaborated }}'
             - name: PATH_TIMESTAMPS_ACQUIRED
-              value: '/MEF/file/completed'
+              value: '{{ .Values.volume.path.acquired }}'
             - name: PATH_TIMESTAMPS_DISCARDED
-              value: '/MEF/file/discarded'
+              value: '{{ .Values.volume.path.discarded }}'
             - name: PATH_METRICS
-              value: '/MEF/metrics'
+              value: '{{ .Values.volume.path.metrics }}'
+            - name: SPRING_KAFKA_CONSUMER_GROUP-ID
+              value: '{{ .Values.kafka.consumerGroup }}'
             - name: SPRING_KAFKA_LISTENER_PARTITIONS
-              value: '12'
-#              value: '{{ .Values.kafka.listenerPartitions }}'
+              value: '{{ .Values.kafka.listener.partitions }}'
             - name: SPRING_KAFKA_LISTENER_CONCURRENCY
-              value: '12'
-#              value: '{{ .Values.kafka.listenerConcurrency }}'
+              value: '{{ .Values.kafka.listener.concurrency }}'
             - name: SPRING_KAFKA_CONSUMER_MAX-POLL-RECORDS
-              value: '1'
+              value: '{{ .Values.kafka.consumer.maxPollRecords }}'
+            - name: SPRING_KAFKA_CONSUMER_MAX-POLL-INTERVAL-MS
+              value: '{{ .Values.kafka.consumer.maxPollIntervalMs }}'
             - name: TZ
-              value: 'Europe/Rome'
-#            - name: SPRING_KAFKA_CONSUMER_MAX-POLL-INTERVAL-MS
-#              value: '30000'
+              value: '{{ .Values.timeZone }}'
           volumeMounts:
             - name: data-mef
-              mountPath: /MEF/
+              mountPath: '{{ .Values.volume.mountPath }}'
       volumes:
         - name: data-mef
           persistentVolumeClaim:
