--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -12,13 +12,41 @@ upstream prometheus {
 }
 
 upstream kafdrop {
-    server 10.14.1.170:30010;
+   #server 10.14.1.170:30010;
+    server 10.107.203.81;
+}
+
+upstream argocd {
+    server 10.14.1.170:30820;
 }
 
 server {
     listen       80;
     listen  [::]:80;
     server_name  localhost;
+
+        location /argo-cd/ {
+            proxy_pass         http://argocd/argo-cd/;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+            # buffering should be disabled for api/v1/stream/applications to support chunked response
+            proxy_buffering off;
+        }
+
+   # location /argo-cd {
+   #         rewrite /argo-cd/(.*) /$1  break;
+   #         proxy_pass         https://argocd;
+   #         proxy_redirect     off;
+   #         proxy_set_header   Host $host;
+   #         proxy_set_header   X-Real-IP $remote_addr;
+   #         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+   #         proxy_set_header   X-Forwarded-Host $server_name;
+   #         # buffering should be disabled for api/v1/stream/applications to support chunked response
+   #         proxy_buffering off;
+   # }
 
     location /scheduled-client/ {
       proxy_pass http://10.14.1.170:30001/scheduled-client/;
@@ -36,7 +64,6 @@ server {
       proxy_set_header   Host $host;
       proxy_set_header X-Script-Name /kafdrop;
     }
-
 
     location /longhorn/ {
       proxy_pass http://10.111.68.25/;
